# frtrader

./: .gitmodules  FRTrader.cabal  LICENSE  README.md  frtrader.cabal  stack.yaml
app/: Main.hs
doc/: Functional Reactive Bitcoin Trading.pptx  agent-shutdown.md  copy-strategy-basics.md  copy-strategy.md  framework-architecture.md  market-interface-model.md  mirror-strategy-spec.md  mirroring-strategy-2.pptx  thread-model.md
src/: Combinator.hs  Interface.hs  Strategy.hs  TradingFramework.hs
src/Trading/: Framework.hs
test/: Test.hs
