cabal-version:       >=1.20

name:                FRTrader
version:             0.1.0.0
synopsis:            A Functional Reactive Bitcoin Trader
description:         Please see README.md
homepage:            https://github.com/dimitri-xyz/frtrader#readme
author:              Dimitri DeFigueiredo
maintainer:          defigueiredo@ucdavis.edu
copyright:           2017 Dimitri DeFigueiredo
category:            finance
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:       doc/frbtrading.lyx
                     , doc/copy-strategy.md

library
  hs-source-dirs:      src
  exposed-modules:     Trading.Framework

  default-language:    Haskell2010
  build-depends:       base
                     , pipes-concurrency
                     , reactive-banana
                     , market-interface
                     , razao-base
                     , bytestring

executable frt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , async
                     , pipes-concurrency
                     , reactive-banana
                     , FRTrader
                     , razao-base
                     , market-model
                     , market-interface
                     , trading-strategy
                     , coinbene-connector
                     , bytestring
                     , extra

executable frt-eth
  cpp-options:         -DETHEREUM

  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , async
                     , pipes-concurrency
                     , reactive-banana
                     , FRTrader
                     , razao-base
                     , market-model
                     , market-interface
                     , trading-strategy
                     , coinbene-connector
                     , bytestring
                     , extra

test-suite test-FRTrader
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , reactive-banana
                     , razao-base
                     , FRTrader
                     , tasty
                     , tasty-hunit
                     , market-interface
                     , market-model
                     , unordered-containers
                     , trading-strategy

source-repository head
  type:     git
  location: https://github.com/dimitri-xyz/frtrader
